Fix chart gap

--- a/exercise_react/src/App.css
+++ b/exercise_react/src/App.css
@@ -162,3 +162,7 @@ footer {
   text-align: center;
   background-color: darkcyan;
 }
+
+.border-fix {
+  border-collapse: collapse;
+}
